# qdftgraph

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  configure.ac
doc/: Doxyfile.in  Makefile.am
include/: Makefile.am
include/qdft/: SWIGTYPE_p_namespace.cs  action.hh  dataManagers.cs  graph.hh  libqdftgraph.cs  libqdftgraphPINVOKE.cs  manager.hh  manager.hxx  mode_type.cs  qdft.hh  qdft.hxx  qdft.i  qdft_wrap.cxx  types.hh
m4/: boost.m4  cxxflags.m4
script/: precision.sh  qdftgraph_pp.sh  run_trace.sh  test.sh  time.sh
src/: Makefile.am  example.cc  test_lib.cc  wintraceparser.cc
